--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body {
 h2 {
   font-size: 30px;
   color: rgba(255, 255, 255, 0.8);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .glass {
@@ -41,7 +42,7 @@ h2 {
   min-width: 300px;
   width: 80%;
   max-width: 1200px;
-  height: 80%;
+  height: 85%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,9 +50,6 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .covid-icon {
@@ -61,29 +59,81 @@ h2 {
 }
 
 .header {
-  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .covid-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 .covid-box .stats-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
 
-.covid-box .stats-box-pl {
-  margin-bottom: 30px;
+.covid-box .stats-box .label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.covid-box .stats-box .label .location-icon {
+  margin-right: 5px;
+  width: 20px;
+}
+
+.covid-box .stats-box .label .location-text {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: white;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  font-weight: 700;
+  letter-spacing: 1.5px;
+}
+
+.covid-box .stats-box-pl,
+.covid-box .stats-box-world {
+  text-align: center;
+}
+
+.covid-box .stats-box-pl p,
+.covid-box .stats-box-world p {
+  font-size: 14px;
+  margin-bottom: 15px;
+  color: #444444;
 }
 
 .covid-box .charts-box {
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3;
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
 }
 
 @-webkit-keyframes rotation {
