--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@ body {
 h2 {
 	font-size: 30px;
 	color: rgba(255, 255, 255, 0.8);
+	border-bottom: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .glass {
@@ -32,10 +33,9 @@ h2 {
 	min-width: 300px;
 	width: 80%;
 	max-width: 1200px;
-	height: 80%;
+	height: 85%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 }
 
 .covid-icon {
@@ -44,22 +44,55 @@ h2 {
 }
 
 .header {
-	border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+	display: flex;
+	justify-content: center;
 }
 
 .covid-box {
 	display: flex;
+	width: 100%;
+	height: 100%;
 
 	.stats-box {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
 		flex: 1;
-	}
 
-	.stats-box-pl {
-		margin-bottom: 30px;
+		.label {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin-bottom: 20px;
+
+			.location-icon {
+				margin-right: 5px;
+				width: 20px;
+			}
+
+			.location-text {
+				font-size: 14px;
+				text-transform: uppercase;
+				color: rgb(255, 255, 255);
+				border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+				font-weight: 700;
+				letter-spacing: 1.5px;
+			}
+		}
+	}
+	.stats-box-pl,
+	.stats-box-world {
+		text-align: center;
+
+		p {
+			font-size: 14px;
+			margin-bottom: 15px;
+			color: rgb(68, 68, 68);
+		}
 	}
 
 	.charts-box {
-		flex: 3;
+		flex: 4;
 	}
 }
 
