Funkcjonalność przycisków do wykresów

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -134,8 +134,9 @@ button:hover {
 
 		.chart-box-world {
 			flex: 1;
+			padding-bottom: 10px;
 
-			.chart {
+			.chart-world {
 				padding: 20px;
 			}
 
