--- a/css/main.css
+++ b/css/main.css
@@ -191,9 +191,10 @@ button:hover {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  padding-bottom: 10px;
 }
 
-.covid-box .charts-box .chart-box-world .chart {
+.covid-box .charts-box .chart-box-world .chart-world {
   padding: 20px;
 }
 
