--- a/css/main.css
+++ b/css/main.css
@@ -29,24 +29,27 @@ h2 {
 }
 
 button {
+  padding: 5px 15px;
   font-family: 'Quicksand', sans-serif;
-  font-size: 12px;
-  font-weight: 700;
-  color: #444444;
-  padding: 0 15px;
-  background-color: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 0.25rem;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
-          box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  font-size: 11px;
+  background-color: white;
+  border: none;
+  border-radius: 10px;
   cursor: pointer;
+  -webkit-transition: color 0.3s, -webkit-box-shadow 0.3s;
+  transition: color 0.3s, -webkit-box-shadow 0.3s;
+  transition: color 0.3s, box-shadow 0.3s;
+  transition: color 0.3s, box-shadow 0.3s, -webkit-box-shadow 0.3s;
+}
+
+button:focus {
+  outline: none;
 }
 
 button:hover {
-  border-color: rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-  color: rgba(0, 0, 0, 0.65);
+  color: deepskyblue;
+  -webkit-box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+          box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 }
 
 .glass {
@@ -71,6 +74,7 @@ button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow-y: scroll;
 }
 
 .covid-icon {
@@ -92,24 +96,20 @@ button:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .covid-box .stats-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  margin-top: 20px;
 }
 
 .covid-box .stats-box .label {
@@ -122,7 +122,7 @@ button:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .covid-box .stats-box .label .location-icon {
@@ -139,16 +139,45 @@ button:hover {
   letter-spacing: 1.5px;
 }
 
-.covid-box .stats-box-pl,
-.covid-box .stats-box-world {
+.covid-box .stats-box .stats-box-pl,
+.covid-box .stats-box .stats-box-world {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
+  padding: 0 25px;
 }
 
-.covid-box .stats-box-pl p,
-.covid-box .stats-box-world p {
-  font-size: 14px;
-  margin-bottom: 15px;
+.covid-box .stats-box .stats-box-pl p,
+.covid-box .stats-box .stats-box-world p {
+  font-size: clamp(0.6rem, 80%, 1vw);
   color: #444444;
+}
+
+.covid-box .stats-box .stats-box-pl h3,
+.covid-box .stats-box .stats-box-world h3 {
+  font-size: clamp(0.9rem, 100%, 1.1vw);
+}
+
+.covid-box .stats-box .stats-box-pl .statistics,
+.covid-box .stats-box .stats-box-world .statistics {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.covid-box .stats-box .stats-box-pl .statistic,
+.covid-box .stats-box .stats-box-world .statistic {
+  margin: 10px 20px;
 }
 
 .covid-box .charts-box {
@@ -159,56 +188,52 @@ button:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-flex: 4;
-      -ms-flex: 4;
-          flex: 4;
 }
 
-.covid-box .charts-box .chart-box-pl {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.covid-box .charts-box .chart-box-pl .chart {
-  padding: 20px;
-}
-
-.covid-box .charts-box .chart-box-pl .chart-inputs-pl {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
-.covid-box .charts-box .chart-box-pl .chart-inputs-pl label {
-  font-size: 13px;
-}
-
+.covid-box .charts-box .chart-box-pl,
 .covid-box .charts-box .chart-box-world {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  padding-bottom: 10px;
+  padding: 25px;
 }
 
-.covid-box .charts-box .chart-box-world .chart-world {
-  padding: 20px;
+.covid-box .charts-box .chart,
+.covid-box .charts-box .chart-world {
+  height: 350px;
 }
 
-.covid-box .charts-box .chart-box-world .chart-inputs-world {
+.covid-box .charts-box .chart-inputs-pl,
+.covid-box .charts-box .chart-inputs-world {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  margin-top: 20px;
+  text-align: center;
 }
 
-.covid-box .charts-box .chart-box-world .chart-inputs-world label {
-  font-size: 13px;
+.covid-box .charts-box label {
+  font-size: 12px;
+}
+
+.wrapper::-webkit-scrollbar {
+  width: 0.6em;
+}
+
+.wrapper::-webkit-scrollbar-track {
+  background: transparent;
+  margin-block: 0.3em;
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 100vw;
+  -webkit-transition: background 0.3 linear;
+  transition: background 0.3 linear;
+}
+
+.wrapper::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.6);
 }
 
 @-webkit-keyframes rotation {
@@ -230,6 +255,13 @@ button:hover {
   to {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .wrapper {
+    width: 90%;
+    height: 90%;
   }
 }
 /*# sourceMappingURL=main.css.map */
