--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,22 +22,23 @@ h2 {
 }
 
 button {
+	padding: 5px 15px;
 	font-family: 'Quicksand', sans-serif;
-	font-size: 12px;
-	font-weight: 700;
-	color: rgb(68, 68, 68);
-	padding: 0 15px;
-	background-color: #ffffff;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	border-radius: 0.25rem;
-	box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+	font-size: 11px;
+	background-color: white;
+	border: none;
+	border-radius: 10px;
 	cursor: pointer;
+	transition: color 0.3s, box-shadow 0.3s;
+}
+
+button:focus {
+	outline: none;
 }
 
 button:hover {
-	border-color: rgba(0, 0, 0, 0.15);
-	box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-	color: rgba(0, 0, 0, 0.65);
+	color: rgb(0, 191, 255);
+	box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 }
 
 .glass {
@@ -55,6 +56,7 @@ button:hover {
 	height: 85%;
 	display: flex;
 	flex-direction: column;
+	overflow-y: scroll;
 }
 
 .covid-icon {
@@ -69,20 +71,18 @@ button:hover {
 
 .covid-box {
 	display: flex;
-	width: 100%;
-	height: 100%;
+	flex-direction: column;
 
 	.stats-box {
 		display: flex;
-		flex-direction: column;
 		justify-content: space-evenly;
-		flex: 1;
+		margin-top: 20px;
 
 		.label {
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			margin-bottom: 20px;
+			margin-bottom: 10px;
 
 			.location-icon {
 				margin-right: 5px;
@@ -98,58 +98,78 @@ button:hover {
 				letter-spacing: 1.5px;
 			}
 		}
-	}
-	.stats-box-pl,
-	.stats-box-world {
-		text-align: center;
+		.stats-box-pl,
+		.stats-box-world {
+			display: flex;
+			flex-direction: column;
+			text-align: center;
+			padding: 0 25px;
 
-		p {
-			font-size: 14px;
-			margin-bottom: 15px;
-			color: rgb(68, 68, 68);
+			p {
+				font-size: clamp(0.6rem, 80%, 1vw);
+				color: rgb(68, 68, 68);
+			}
+
+			h3 {
+				font-size: clamp(0.9rem, 100%, 1.1vw);
+			}
+
+			.statistics {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+			}
+
+			.statistic {
+				margin: 10px 20px;
+			}
 		}
 	}
 
 	.charts-box {
 		display: flex;
 		flex-direction: column;
-		flex: 4;
 
-		.chart-box-pl {
-			flex: 1;
-
-			.chart {
-				padding: 20px;
-			}
-
-			.chart-inputs-pl {
-				display: flex;
-				justify-content: space-evenly;
-
-				label {
-					font-size: 13px;
-				}
-			}
+		.chart-box-pl,
+		.chart-box-world {
+			padding: 25px;
 		}
 
-		.chart-box-world {
-			flex: 1;
-			padding-bottom: 10px;
+		.chart,
+		.chart-world {
+			height: 350px;
+		}
 
-			.chart-world {
-				padding: 20px;
-			}
-
-			.chart-inputs-world {
-				display: flex;
-				justify-content: space-evenly;
-
-				label {
-					font-size: 13px;
-				}
-			}
+		.chart-inputs-pl,
+		.chart-inputs-world {
+			display: flex;
+			justify-content: space-evenly;
+			margin-top: 20px;
+			text-align: center;
+		}
+		label {
+			font-size: 12px;
 		}
 	}
+}
+
+.wrapper::-webkit-scrollbar {
+	width: 0.6em;
+}
+
+.wrapper::-webkit-scrollbar-track {
+	background: transparent;
+	margin-block: 0.3em;
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+	background: rgba(255, 255, 255, 0.4);
+	border-radius: 100vw;
+	transition: background 0.3 linear;
+}
+
+.wrapper::-webkit-scrollbar-thumb:hover {
+	background: rgba(255, 255, 255, 0.6);
 }
 
 @keyframes rotation {
@@ -158,5 +178,12 @@ button:hover {
 	}
 	to {
 		transform: rotate(360deg);
+	}
+}
+
+@media only screen and (max-width: 750px) {
+	.wrapper {
+		width: 90%;
+		height: 90%;
 	}
 }
