--- a/sass/main.scss
+++ b/sass/main.scss
@@ -89,7 +89,8 @@ button:hover {
 				width: 20px;
 			}
 
-			.location-text {
+			.country-text,
+			.world-text {
 				font-size: 14px;
 				text-transform: uppercase;
 				color: rgb(255, 255, 255);
