--- a/sass/main.scss
+++ b/sass/main.scss
@@ -84,7 +84,8 @@ button:hover {
 			align-items: center;
 			margin-bottom: 10px;
 
-			.location-icon {
+			.country-icon,
+			.world-icon {
 				margin-right: 5px;
 				width: 20px;
 			}
@@ -150,6 +151,25 @@ button:hover {
 		}
 		label {
 			font-size: 12px;
+		}
+	}
+}
+
+.select-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20px;
+	label {
+		font-size: 13px;
+		margin-right: 8px;
+	}
+	select {
+		border: 1px solid rgba(68, 68, 68, 0.2);
+		border-radius: 10px;
+		padding: 5px;
+
+		option {
 		}
 	}
 }
